Added avatar, node engine, feedgen account params

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ FEEDGEN_HOSTNAME="example.com"
 # You can find your accounts DID by going to
 # https://bsky.social/xrpc/com.atproto.identity.resolveHandle?handle=${YOUR_HANDLE}
 FEEDGEN_PUBLISHER_DID="did:plc:abcde...."
+FEEDGEN_PUBLISHER_HANDLE="..."
+FEEDGEN_PUBLISHER_IDENTIFIER="..."
+FEEDGEN_PUBLISHER_PASSWORD="..."
 
 # Only use this if you want a service did different from did:web
 # FEEDGEN_SERVICE_DID="did:plc:abcde..."
